# proj-ind-demo

./: README.md  pyproject.toml
proj_ind_demo/: demo.py
proj_ind_demo/base_classes/: agent.py  network.py  pipe.py  vertex.py
